Page MenuHome GnuPG

v5: verify with signing sub key
Closed, ResolvedPublic

Description

When verifying signature signed by ed448 subkey, we see following in 2.3.2:

gpg: Signature made Wed Sep 29 10:12:36 2021 JST
gpg:                using EDDSA key 3F17746E8AE1BFE6FFCD698DBC7FE1DF1488327F9FE29A1F34CBA0CA4731DBA4
gpg:                issuer "k@gniibe.org"
gpg: WARNING: signing subkey 3F17746E8AE1BFE6 is not cross-certified
gpg: please see https://gnupg.org/faq/subkey-cross-certify.html for more information
gpg: Can't check signature: General error

This is due to v5 packet handling in merge_selfsigs_subkey.

Revisions and Commits